# assemblySimulator

./: CMakeLists.txt  README.md  asmsim.c
examples/: hello.vsm
include/errors/: errors.h
include/evaluator/: evaluator.h
include/evaluator/instructions/: instructions.h
include/evaluator/instructions/function/: function.h
include/evaluator/memory/: memory.h
include/evaluator/program/: program.h
include/lexer/: lexer.h
include/lexer/function/: function.h
include/lexer/stream/: stream.h
include/lexer/token/: token.h
include/lexer/utils/: utils.h
include/list/: list.h
include/syscalls/: syscalls.h
src/: asmsim.c
src/errors/: errors.c  errors.h
src/evaluator/: evaluator.c
src/evaluator/instructions/: instructions.c
src/evaluator/instructions/function/: function.c
src/evaluator/memory/: memory.c  memory.h
src/evaluator/program/: program.c  program.h
src/evaluator/stack/: stack.h
src/lexer/: lexer.c  lexer.h  token.h  utils.c  utils.h
src/lexer/function/: function.c  function.h
src/lexer/organizer/: organizer.c  organizer.h
src/lexer/stream/: stream.c  stream.h
src/lexer/token/: token.c  token.h
src/lexer/utils/: utils.c  utils.h
src/list/: list.c  list.h
src/syscalls/: syscalls.c
